# writings

./: .gitignore  ADMIN_UX_DESIGN.md  Cargo.toml  DECENTRALIZED_HOSTING.md  DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  MANUAL_DIAGNOSTIC.md  NMVP_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_START.md  README.md  REPOSITORY_SETUP.md  TROUBLESHOOTING.md  deploy.sh  diagnose.sh  setup-repo.sh  start-nmvp.sh  test-admin.md
.github/workflows/: deploy.yml
client/: Cargo.toml
client/src/: arweave.rs  blog_client.rs  lib.rs  types.rs
docs/: debug.html  index.html
docs/assets/: solana-blog-frontend-53ac13f686a5e2f3.js  solana-blog-frontend-53ac13f686a5e2f3.js.br  solana-blog-frontend-6a1b953c72a491b1.js  solana-blog-frontend-6a1b953c72a491b1.js.br  solana-blog-frontend-6b515f59879e7eb9.js  solana-blog-frontend-6b515f59879e7eb9.js.br  solana-blog-frontend-d3860f0aa52ab7b7.js  solana-blog-frontend-d3860f0aa52ab7b7.js.br  solana-blog-frontend-f45b41845043ef11.js  solana-blog-frontend-f45b41845043ef11.js.br  solana-blog-frontend_bg-0e40f556ad08fa58.wasm  solana-blog-frontend_bg-0e40f556ad08fa58.wasm.br  solana-blog-frontend_bg-4b267a9ba05c55a9.wasm  solana-blog-frontend_bg-4b267a9ba05c55a9.wasm.br  solana-blog-frontend_bg-6f4985881930ba08.wasm  solana-blog-frontend_bg-6f4985881930ba08.wasm.br  solana-blog-frontend_bg-7d7c0acbc37fbbf3.wasm  solana-blog-frontend_bg-7d7c0acbc37fbbf3.wasm.br  solana-blog-frontend_bg-9c085e8f3c0afadd.wasm  solana-blog-frontend_bg-9c085e8f3c0afadd.wasm.br
frontend/: Cargo.toml  Dioxus.toml  index.html
frontend/src/: app.rs  config.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/pages/: about.rs  admin.rs  blog_view.rs  create_post.rs  home.rs  mod.rs  post_view.rs
frontend/src/services/: arweave_service.rs  mod.rs
frontend/src/utils/: mod.rs
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs  state.rs
scripts/: build.sh  create_blog.rs  create_real_blog.sh  deploy.sh  dev.sh
