[workspace]
members = [
    "program",
    "client",
    "frontend"
]
resolver = "2"

[workspace.dependencies]
solana-program = "1.17"
solana-client = "1.17"
solana-sdk = "1.17"
borsh = "0.10"
dioxus = "0.4"
dioxus-web = "0.4"
dioxus-desktop = "0.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21" 

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
