[package]
name = "solana-blog-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-blog-program = { path = "../program", features = ["no-entrypoint"] }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true } 