[package]
name = "solana-blog-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4"
dioxus-web = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.29", features = ["macros", "rt"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2"
uuid = { version = "1.0", features = ["v4", "js"] }

# Desktop-specific dependencies 
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = { version = "0.4" }
solana-blog-client = { path = "../client" }
tokio = { version = "1.29", features = ["time"] }

# WASM-specific dependencies (web only)
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.4"
web-sys = { version = "0.3", features = ["console", "Storage", "Window", "Document", "Element", "HtmlInputElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.29", features = ["sync", "macros", "io-util", "rt", "time"] }
uuid = { version = "1.0", features = ["v4", "js"] }

[features]
default = ["web"]
web = []
desktop = []

[[bin]]
name = "solana-blog-frontend"
path = "src/main.rs" 